parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    BREAK
    CASE
    CATCH
    CLASS
    CONTINUE
    DEBUGGER
    DEFAULT
    DIV_EQUAL
    DO
    EXPORT
    EXTENDS
    FINALLY
    FOR
    IMPORT
    IN
    INSTANCEOF
    MINUS_EQUAL
    MOD
    MOD_EQUAL
    MUL_EQUAL
    PLUS_EQUAL
    PRINT
    SWITCH
    THIS
    THROW
    TRY
    TWOPOINTS
    TYPEOF
    WITH
    YIELD

Grammar

Rule 0     S' -> sentencia
Rule 1     sentencia -> callMethods
Rule 2     sentencia -> varType ID EQUAL callMethods
Rule 3     sentencia -> callFunction
Rule 4     sentencia -> javaScript_param
Rule 5     sentencia -> varDeclaration
Rule 6     sentencia -> controlExpression
Rule 7     sentencia -> impresion
Rule 8     sentencia -> declareteFunction
Rule 9     sentencia -> assingOperadores
Rule 10    expression -> conditionalEspecifico
Rule 11    expression -> inicializarOp
Rule 12    assingOperadores -> varType ID EQUAL inicializarOp
Rule 13    controlExpression -> sentencias_if
Rule 14    controlExpression -> sentencias_if_else
Rule 15    controlExpression -> sentencias_while
Rule 16    controlExpression -> impresion
Rule 17    controlExpression -> impresion_vacio
Rule 18    opConditional -> ISEQUAL
Rule 19    opConditional -> IS_NOT_IDENTICAL
Rule 20    opConditional -> IS_IDENTICAL
Rule 21    opConditional -> GREATER
Rule 22    opConditional -> GREATEREQUAL
Rule 23    opConditional -> LESS
Rule 24    opConditional -> LESSEQUAL
Rule 25    opConditional -> boolean
Rule 26    operadorLogical -> AND
Rule 27    operadorLogical -> OR
Rule 28    operadorLogical -> NOT
Rule 29    sentencias_if -> IF LPAREN expression operadorLogical expression RPAREN LBLOCK sentencia RBLOCK
Rule 30    sentencias_if -> IF LPAREN expression RPAREN LBLOCK sentencia RBLOCK
Rule 31    sentencias_if_else -> IF LPAREN expression operadorLogical expression RPAREN LBLOCK sentencia RBLOCK ELSE LBLOCK sentencia RBLOCK
Rule 32    sentencias_if_else -> IF LPAREN expression RPAREN LBLOCK sentencia RBLOCK ELSE LBLOCK sentencia RBLOCK
Rule 33    sentencias_while -> WHILE LPAREN expression RPAREN LBLOCK sentencia RBLOCK
Rule 34    sentencias_while -> WHILE LPAREN expression operadorLogical expression RPAREN LBLOCK sentencia RBLOCK
Rule 35    impresion -> ALERT LPAREN expression RPAREN
Rule 36    impresion_vacio -> ALERT LPAREN RPAREN
Rule 37    javaScript_param -> STRING
Rule 38    javaScript_param -> NUM
Rule 39    javaScript_param -> boolean
Rule 40    javaScript_param -> ID
Rule 41    empty -> <empty>
Rule 42    boolean -> TRUE
Rule 43    boolean -> FALSE
Rule 44    varType -> LET
Rule 45    varType -> CONST
Rule 46    varType -> VAR
Rule 47    varType -> empty
Rule 48    varDeclaration -> varType ID EQUAL arrayDeclare COLON
Rule 49    varDeclaration -> varType ID EQUAL declareMap COLON
Rule 50    varDeclaration -> varType ID EQUAL declararSet COLON
Rule 51    varDeclaration -> varType ID COLON
Rule 52    callMethods -> ID methodArray COLON
Rule 53    callMethods -> ID methodSet COLON
Rule 54    callMethods -> ID methodMap COLON
Rule 55    arrayDeclare -> LBRACKET arrayValues RBRACKET
Rule 56    arrayDeclare -> NEW ARRAY LPAREN arrayValues RPAREN
Rule 57    arrayValues -> arrayValue
Rule 58    arrayValues -> arrayValue COMMA arrayValue
Rule 59    arrayValue -> LPAREN expression RPAREN
Rule 60    arrayValue -> ID
Rule 61    arrayValue -> NUM
Rule 62    arrayValue -> STRING
Rule 63    arrayValue -> boolean
Rule 64    arrayValue -> empty
Rule 65    methodArray -> PERIOD PUSH LPAREN arrayValue RPAREN
Rule 66    methodArray -> PERIOD UNSHIFT LPAREN arrayValue RPAREN
Rule 67    methodArray -> PERIOD POP LPAREN empty RPAREN
Rule 68    declareMap -> NEW MAP LPAREN iterable RPAREN
Rule 69    iterable -> arrayDeclare
Rule 70    iterable -> declararSet
Rule 71    iterable -> empty
Rule 72    methodMap -> PERIOD CLEAR LPAREN RPAREN
Rule 73    methodMap -> PERIOD LENGTH LPAREN RPAREN
Rule 74    declareteFunction -> FUNCTION ID LPAREN params RPAREN
Rule 75    declareteFunction -> FUNCTION ID LPAREN params RPAREN sentencesCmpt
Rule 76    declareteFunction -> varType ID EQUAL FUNCTION LPAREN params RPAREN
Rule 77    sentencesCmpt -> LBLOCK sentencia RBLOCK
Rule 78    sentencesCmpt -> LBLOCK sentencia RETURN RBLOCK
Rule 79    callFunction -> ID LPAREN params RPAREN
Rule 80    params -> paramList
Rule 81    params -> empty
Rule 82    param -> ID
Rule 83    param -> ID LBRACKET RBRACKET
Rule 84    paramList -> param
Rule 85    paramList -> param COMMA paramList
Rule 86    args -> argslist
Rule 87    args -> empty
Rule 88    args -> javaScript_param
Rule 89    argslist -> args
Rule 90    argslist -> args COMMA argslist
Rule 91    declararSet -> NEW SET LPAREN setValues RPAREN
Rule 92    contiene -> ID PERIOD HAS LPAREN params RPAREN
Rule 93    setValues -> setValue
Rule 94    setValues -> setValue COMMA setValue
Rule 95    setValue -> ID
Rule 96    setValue -> NUM
Rule 97    setValue -> STRING
Rule 98    setValue -> boolean
Rule 99    setValue -> empty
Rule 100   methodSet -> PERIOD ADD LPAREN setValue RPAREN
Rule 101   methodSet -> PERIOD DELETE LPAREN setValue RPAREN
Rule 102   methodSet -> PERIOD CLEAR LPAREN empty RPAREN
Rule 103   inicializarOp -> PLUS operacionesMath
Rule 104   inicializarOp -> MINUS operacionesMath
Rule 105   inicializarOp -> empty operacionesMath
Rule 106   operacionesMath -> numOperadores PLUS suma
Rule 107   operacionesMath -> suma
Rule 108   operacionesMath -> suma operacionesMath
Rule 109   operacionesMath -> restas
Rule 110   operacionesMath -> numOperadores MINUS restas
Rule 111   operacionesMath -> restas operacionesMath
Rule 112   operacionesMath -> multiplicacion
Rule 113   operacionesMath -> numOperadores TIMES multiplicacion
Rule 114   operacionesMath -> multiplicacion operacionesMath
Rule 115   suma -> numOperadores PLUS LPAREN numOperadores RPAREN
Rule 116   suma -> numOperadores PLUS NUM
Rule 117   suma -> numOperadores
Rule 118   restas -> numOperadores MINUS LPAREN numOperadores RPAREN
Rule 119   restas -> numOperadores MINUS NUM
Rule 120   restas -> numOperadores
Rule 121   multiplicacion -> numOperadores TIMES LPAREN numOperadores RPAREN
Rule 122   multiplicacion -> numOperadores TIMES NUM
Rule 123   multiplicacion -> numOperadores
Rule 124   divicion -> numOperadores DIVIDE LPAREN numOperadores RPAREN
Rule 125   divicion -> numOperadores DIVIDE NUM
Rule 126   divicion -> numOperadores
Rule 127   numOperadores -> enteros
Rule 128   numOperadores -> decimales
Rule 129   enteros -> NUM
Rule 130   enteros -> numNegative
Rule 131   numNegative -> MINUS NUM
Rule 132   numNegative -> <empty>
Rule 133   decimales -> enteros PERIOD NUM
Rule 134   conditionalEspecifico -> ID opConditional dataCondi
Rule 135   conditionalEspecifico -> NUM opConditional NUM
Rule 136   conditionalEspecifico -> STRING opConditional STRING
Rule 137   dataCondi -> STRING
Rule 138   dataCondi -> NUM

Terminals, with rules where they appear

ADD                  : 100
ALERT                : 35 36
AND                  : 26
ARRAY                : 56
BREAK                : 
CASE                 : 
CATCH                : 
CLASS                : 
CLEAR                : 72 102
COLON                : 48 49 50 51 52 53 54
COMMA                : 58 85 90 94
CONST                : 45
CONTINUE             : 
DEBUGGER             : 
DEFAULT              : 
DELETE               : 101
DIVIDE               : 124 125
DIV_EQUAL            : 
DO                   : 
ELSE                 : 31 32
EQUAL                : 2 12 48 49 50 76
EXPORT               : 
EXTENDS              : 
FALSE                : 43
FINALLY              : 
FOR                  : 
FUNCTION             : 74 75 76
GREATER              : 21
GREATEREQUAL         : 22
HAS                  : 92
ID                   : 2 12 40 48 49 50 51 52 53 54 60 74 75 76 79 82 83 92 95 134
IF                   : 29 30 31 32
IMPORT               : 
IN                   : 
INSTANCEOF           : 
ISEQUAL              : 18
IS_IDENTICAL         : 20
IS_NOT_IDENTICAL     : 19
LBLOCK               : 29 30 31 31 32 32 33 34 77 78
LBRACKET             : 55 83
LENGTH               : 73
LESS                 : 23
LESSEQUAL            : 24
LET                  : 44
LPAREN               : 29 30 31 32 33 34 35 36 56 59 65 66 67 68 72 73 74 75 76 79 91 92 100 101 102 115 118 121 124
MAP                  : 68
MINUS                : 104 110 118 119 131
MINUS_EQUAL          : 
MOD                  : 
MOD_EQUAL            : 
MUL_EQUAL            : 
NEW                  : 56 68 91
NOT                  : 28
NUM                  : 38 61 96 116 119 122 125 129 131 133 135 135 138
OR                   : 27
PERIOD               : 65 66 67 72 73 92 100 101 102 133
PLUS                 : 103 106 115 116
PLUS_EQUAL           : 
POP                  : 67
PRINT                : 
PUSH                 : 65
RBLOCK               : 29 30 31 31 32 32 33 34 77 78
RBRACKET             : 55 83
RETURN               : 78
RPAREN               : 29 30 31 32 33 34 35 36 56 59 65 66 67 68 72 73 74 75 76 79 91 92 100 101 102 115 118 121 124
SET                  : 91
STRING               : 37 62 97 136 136 137
SWITCH               : 
THIS                 : 
THROW                : 
TIMES                : 113 121 122
TRUE                 : 42
TRY                  : 
TWOPOINTS            : 
TYPEOF               : 
UNSHIFT              : 66
VAR                  : 46
WHILE                : 33 34
WITH                 : 
YIELD                : 
error                : 

Nonterminals, with rules where they appear

args                 : 89 90
argslist             : 86 90
arrayDeclare         : 48 69
arrayValue           : 57 58 58 65 66
arrayValues          : 55 56
assingOperadores     : 9
boolean              : 25 39 63 98
callFunction         : 3
callMethods          : 1 2
conditionalEspecifico : 10
contiene             : 
controlExpression    : 6
dataCondi            : 134
decimales            : 128
declararSet          : 50 70
declareMap           : 49
declareteFunction    : 8
divicion             : 
empty                : 47 64 67 71 81 87 99 102 105
enteros              : 127 133
expression           : 29 29 30 31 31 32 33 34 34 35 59
impresion            : 7 16
impresion_vacio      : 17
inicializarOp        : 11 12
iterable             : 68
javaScript_param     : 4 88
methodArray          : 52
methodMap            : 54
methodSet            : 53
multiplicacion       : 112 113 114
numNegative          : 130
numOperadores        : 106 110 113 115 115 116 117 118 118 119 120 121 121 122 123 124 124 125 126
opConditional        : 134 135 136
operacionesMath      : 103 104 105 108 111 114
operadorLogical      : 29 31 34
param                : 84 85
paramList            : 80 85
params               : 74 75 76 79 92
restas               : 109 110 111
sentencesCmpt        : 75
sentencia            : 29 30 31 31 32 32 33 34 77 78 0
sentencias_if        : 13
sentencias_if_else   : 14
sentencias_while     : 15
setValue             : 93 94 94 100 101
setValues            : 91
suma                 : 106 107 108
varDeclaration       : 5
varType              : 2 12 48 49 50 51 76

Parsing method: LALR

state 0

    (0) S' -> . sentencia
    (1) sentencia -> . callMethods
    (2) sentencia -> . varType ID EQUAL callMethods
    (3) sentencia -> . callFunction
    (4) sentencia -> . javaScript_param
    (5) sentencia -> . varDeclaration
    (6) sentencia -> . controlExpression
    (7) sentencia -> . impresion
    (8) sentencia -> . declareteFunction
    (9) sentencia -> . assingOperadores
    (52) callMethods -> . ID methodArray COLON
    (53) callMethods -> . ID methodSet COLON
    (54) callMethods -> . ID methodMap COLON
    (44) varType -> . LET
    (45) varType -> . CONST
    (46) varType -> . VAR
    (47) varType -> . empty
    (79) callFunction -> . ID LPAREN params RPAREN
    (37) javaScript_param -> . STRING
    (38) javaScript_param -> . NUM
    (39) javaScript_param -> . boolean
    (40) javaScript_param -> . ID
    (48) varDeclaration -> . varType ID EQUAL arrayDeclare COLON
    (49) varDeclaration -> . varType ID EQUAL declareMap COLON
    (50) varDeclaration -> . varType ID EQUAL declararSet COLON
    (51) varDeclaration -> . varType ID COLON
    (13) controlExpression -> . sentencias_if
    (14) controlExpression -> . sentencias_if_else
    (15) controlExpression -> . sentencias_while
    (16) controlExpression -> . impresion
    (17) controlExpression -> . impresion_vacio
    (35) impresion -> . ALERT LPAREN expression RPAREN
    (74) declareteFunction -> . FUNCTION ID LPAREN params RPAREN
    (75) declareteFunction -> . FUNCTION ID LPAREN params RPAREN sentencesCmpt
    (76) declareteFunction -> . varType ID EQUAL FUNCTION LPAREN params RPAREN
    (12) assingOperadores -> . varType ID EQUAL inicializarOp
    (41) empty -> .
    (42) boolean -> . TRUE
    (43) boolean -> . FALSE
    (29) sentencias_if -> . IF LPAREN expression operadorLogical expression RPAREN LBLOCK sentencia RBLOCK
    (30) sentencias_if -> . IF LPAREN expression RPAREN LBLOCK sentencia RBLOCK
    (31) sentencias_if_else -> . IF LPAREN expression operadorLogical expression RPAREN LBLOCK sentencia RBLOCK ELSE LBLOCK sentencia RBLOCK
    (32) sentencias_if_else -> . IF LPAREN expression RPAREN LBLOCK sentencia RBLOCK ELSE LBLOCK sentencia RBLOCK
    (33) sentencias_while -> . WHILE LPAREN expression RPAREN LBLOCK sentencia RBLOCK
    (34) sentencias_while -> . WHILE LPAREN expression operadorLogical expression RPAREN LBLOCK sentencia RBLOCK
    (36) impresion_vacio -> . ALERT LPAREN RPAREN

  ! shift/reduce conflict for ID resolved as shift
    ID              shift and go to state 4
    LET             shift and go to state 12
    CONST           shift and go to state 13
    VAR             shift and go to state 14
    STRING          shift and go to state 16
    NUM             shift and go to state 17
    ALERT           shift and go to state 23
    FUNCTION        shift and go to state 24
    TRUE            shift and go to state 25
    FALSE           shift and go to state 26
    IF              shift and go to state 27
    WHILE           shift and go to state 28

  ! ID              [ reduce using rule 41 (empty -> .) ]

    sentencia                      shift and go to state 1
    callMethods                    shift and go to state 2
    varType                        shift and go to state 3
    callFunction                   shift and go to state 5
    javaScript_param               shift and go to state 6
    varDeclaration                 shift and go to state 7
    controlExpression              shift and go to state 8
    impresion                      shift and go to state 9
    declareteFunction              shift and go to state 10
    assingOperadores               shift and go to state 11
    empty                          shift and go to state 15
    boolean                        shift and go to state 18
    sentencias_if                  shift and go to state 19
    sentencias_if_else             shift and go to state 20
    sentencias_while               shift and go to state 21
    impresion_vacio                shift and go to state 22

state 1

    (0) S' -> sentencia .



state 2

    (1) sentencia -> callMethods .

    $end            reduce using rule 1 (sentencia -> callMethods .)
    RBLOCK          reduce using rule 1 (sentencia -> callMethods .)
    RETURN          reduce using rule 1 (sentencia -> callMethods .)


state 3

    (2) sentencia -> varType . ID EQUAL callMethods
    (48) varDeclaration -> varType . ID EQUAL arrayDeclare COLON
    (49) varDeclaration -> varType . ID EQUAL declareMap COLON
    (50) varDeclaration -> varType . ID EQUAL declararSet COLON
    (51) varDeclaration -> varType . ID COLON
    (76) declareteFunction -> varType . ID EQUAL FUNCTION LPAREN params RPAREN
    (12) assingOperadores -> varType . ID EQUAL inicializarOp

    ID              shift and go to state 29


state 4

    (52) callMethods -> ID . methodArray COLON
    (53) callMethods -> ID . methodSet COLON
    (54) callMethods -> ID . methodMap COLON
    (79) callFunction -> ID . LPAREN params RPAREN
    (40) javaScript_param -> ID .
    (65) methodArray -> . PERIOD PUSH LPAREN arrayValue RPAREN
    (66) methodArray -> . PERIOD UNSHIFT LPAREN arrayValue RPAREN
    (67) methodArray -> . PERIOD POP LPAREN empty RPAREN
    (100) methodSet -> . PERIOD ADD LPAREN setValue RPAREN
    (101) methodSet -> . PERIOD DELETE LPAREN setValue RPAREN
    (102) methodSet -> . PERIOD CLEAR LPAREN empty RPAREN
    (72) methodMap -> . PERIOD CLEAR LPAREN RPAREN
    (73) methodMap -> . PERIOD LENGTH LPAREN RPAREN

    LPAREN          shift and go to state 33
    $end            reduce using rule 40 (javaScript_param -> ID .)
    RBLOCK          reduce using rule 40 (javaScript_param -> ID .)
    RETURN          reduce using rule 40 (javaScript_param -> ID .)
    PERIOD          shift and go to state 34

    methodArray                    shift and go to state 30
    methodSet                      shift and go to state 31
    methodMap                      shift and go to state 32

state 5

    (3) sentencia -> callFunction .

    $end            reduce using rule 3 (sentencia -> callFunction .)
    RBLOCK          reduce using rule 3 (sentencia -> callFunction .)
    RETURN          reduce using rule 3 (sentencia -> callFunction .)


state 6

    (4) sentencia -> javaScript_param .

    $end            reduce using rule 4 (sentencia -> javaScript_param .)
    RBLOCK          reduce using rule 4 (sentencia -> javaScript_param .)
    RETURN          reduce using rule 4 (sentencia -> javaScript_param .)


state 7

    (5) sentencia -> varDeclaration .

    $end            reduce using rule 5 (sentencia -> varDeclaration .)
    RBLOCK          reduce using rule 5 (sentencia -> varDeclaration .)
    RETURN          reduce using rule 5 (sentencia -> varDeclaration .)


state 8

    (6) sentencia -> controlExpression .

    $end            reduce using rule 6 (sentencia -> controlExpression .)
    RBLOCK          reduce using rule 6 (sentencia -> controlExpression .)
    RETURN          reduce using rule 6 (sentencia -> controlExpression .)


state 9

    (7) sentencia -> impresion .
    (16) controlExpression -> impresion .

  ! reduce/reduce conflict for $end resolved using rule 7 (sentencia -> impresion .)
  ! reduce/reduce conflict for RBLOCK resolved using rule 7 (sentencia -> impresion .)
  ! reduce/reduce conflict for RETURN resolved using rule 7 (sentencia -> impresion .)
    $end            reduce using rule 7 (sentencia -> impresion .)
    RBLOCK          reduce using rule 7 (sentencia -> impresion .)
    RETURN          reduce using rule 7 (sentencia -> impresion .)

  ! $end            [ reduce using rule 16 (controlExpression -> impresion .) ]
  ! RBLOCK          [ reduce using rule 16 (controlExpression -> impresion .) ]
  ! RETURN          [ reduce using rule 16 (controlExpression -> impresion .) ]


state 10

    (8) sentencia -> declareteFunction .

    $end            reduce using rule 8 (sentencia -> declareteFunction .)
    RBLOCK          reduce using rule 8 (sentencia -> declareteFunction .)
    RETURN          reduce using rule 8 (sentencia -> declareteFunction .)


state 11

    (9) sentencia -> assingOperadores .

    $end            reduce using rule 9 (sentencia -> assingOperadores .)
    RBLOCK          reduce using rule 9 (sentencia -> assingOperadores .)
    RETURN          reduce using rule 9 (sentencia -> assingOperadores .)


state 12

    (44) varType -> LET .

    ID              reduce using rule 44 (varType -> LET .)


state 13

    (45) varType -> CONST .

    ID              reduce using rule 45 (varType -> CONST .)


state 14

    (46) varType -> VAR .

    ID              reduce using rule 46 (varType -> VAR .)


state 15

    (47) varType -> empty .

    ID              reduce using rule 47 (varType -> empty .)


state 16

    (37) javaScript_param -> STRING .

    $end            reduce using rule 37 (javaScript_param -> STRING .)
    RBLOCK          reduce using rule 37 (javaScript_param -> STRING .)
    RETURN          reduce using rule 37 (javaScript_param -> STRING .)


state 17

    (38) javaScript_param -> NUM .

    $end            reduce using rule 38 (javaScript_param -> NUM .)
    RBLOCK          reduce using rule 38 (javaScript_param -> NUM .)
    RETURN          reduce using rule 38 (javaScript_param -> NUM .)


state 18

    (39) javaScript_param -> boolean .

    $end            reduce using rule 39 (javaScript_param -> boolean .)
    RBLOCK          reduce using rule 39 (javaScript_param -> boolean .)
    RETURN          reduce using rule 39 (javaScript_param -> boolean .)


state 19

    (13) controlExpression -> sentencias_if .

    $end            reduce using rule 13 (controlExpression -> sentencias_if .)
    RBLOCK          reduce using rule 13 (controlExpression -> sentencias_if .)
    RETURN          reduce using rule 13 (controlExpression -> sentencias_if .)


state 20

    (14) controlExpression -> sentencias_if_else .

    $end            reduce using rule 14 (controlExpression -> sentencias_if_else .)
    RBLOCK          reduce using rule 14 (controlExpression -> sentencias_if_else .)
    RETURN          reduce using rule 14 (controlExpression -> sentencias_if_else .)


state 21

    (15) controlExpression -> sentencias_while .

    $end            reduce using rule 15 (controlExpression -> sentencias_while .)
    RBLOCK          reduce using rule 15 (controlExpression -> sentencias_while .)
    RETURN          reduce using rule 15 (controlExpression -> sentencias_while .)


state 22

    (17) controlExpression -> impresion_vacio .

    $end            reduce using rule 17 (controlExpression -> impresion_vacio .)
    RBLOCK          reduce using rule 17 (controlExpression -> impresion_vacio .)
    RETURN          reduce using rule 17 (controlExpression -> impresion_vacio .)


state 23

    (35) impresion -> ALERT . LPAREN expression RPAREN
    (36) impresion_vacio -> ALERT . LPAREN RPAREN

    LPAREN          shift and go to state 35


state 24

    (74) declareteFunction -> FUNCTION . ID LPAREN params RPAREN
    (75) declareteFunction -> FUNCTION . ID LPAREN params RPAREN sentencesCmpt

    ID              shift and go to state 36


state 25

    (42) boolean -> TRUE .

    $end            reduce using rule 42 (boolean -> TRUE .)
    STRING          reduce using rule 42 (boolean -> TRUE .)
    NUM             reduce using rule 42 (boolean -> TRUE .)
    COMMA           reduce using rule 42 (boolean -> TRUE .)
    RBRACKET        reduce using rule 42 (boolean -> TRUE .)
    RPAREN          reduce using rule 42 (boolean -> TRUE .)
    RBLOCK          reduce using rule 42 (boolean -> TRUE .)
    RETURN          reduce using rule 42 (boolean -> TRUE .)


state 26

    (43) boolean -> FALSE .

    $end            reduce using rule 43 (boolean -> FALSE .)
    STRING          reduce using rule 43 (boolean -> FALSE .)
    NUM             reduce using rule 43 (boolean -> FALSE .)
    COMMA           reduce using rule 43 (boolean -> FALSE .)
    RBRACKET        reduce using rule 43 (boolean -> FALSE .)
    RPAREN          reduce using rule 43 (boolean -> FALSE .)
    RBLOCK          reduce using rule 43 (boolean -> FALSE .)
    RETURN          reduce using rule 43 (boolean -> FALSE .)


state 27

    (29) sentencias_if -> IF . LPAREN expression operadorLogical expression RPAREN LBLOCK sentencia RBLOCK
    (30) sentencias_if -> IF . LPAREN expression RPAREN LBLOCK sentencia RBLOCK
    (31) sentencias_if_else -> IF . LPAREN expression operadorLogical expression RPAREN LBLOCK sentencia RBLOCK ELSE LBLOCK sentencia RBLOCK
    (32) sentencias_if_else -> IF . LPAREN expression RPAREN LBLOCK sentencia RBLOCK ELSE LBLOCK sentencia RBLOCK

    LPAREN          shift and go to state 37


state 28

    (33) sentencias_while -> WHILE . LPAREN expression RPAREN LBLOCK sentencia RBLOCK
    (34) sentencias_while -> WHILE . LPAREN expression operadorLogical expression RPAREN LBLOCK sentencia RBLOCK

    LPAREN          shift and go to state 38


state 29

    (2) sentencia -> varType ID . EQUAL callMethods
    (48) varDeclaration -> varType ID . EQUAL arrayDeclare COLON
    (49) varDeclaration -> varType ID . EQUAL declareMap COLON
    (50) varDeclaration -> varType ID . EQUAL declararSet COLON
    (51) varDeclaration -> varType ID . COLON
    (76) declareteFunction -> varType ID . EQUAL FUNCTION LPAREN params RPAREN
    (12) assingOperadores -> varType ID . EQUAL inicializarOp

    EQUAL           shift and go to state 39
    COLON           shift and go to state 40


state 30

    (52) callMethods -> ID methodArray . COLON

    COLON           shift and go to state 41


state 31

    (53) callMethods -> ID methodSet . COLON

    COLON           shift and go to state 42


state 32

    (54) callMethods -> ID methodMap . COLON

    COLON           shift and go to state 43


state 33

    (79) callFunction -> ID LPAREN . params RPAREN
    (80) params -> . paramList
    (81) params -> . empty
    (84) paramList -> . param
    (85) paramList -> . param COMMA paramList
    (41) empty -> .
    (82) param -> . ID
    (83) param -> . ID LBRACKET RBRACKET

    RPAREN          reduce using rule 41 (empty -> .)
    ID              shift and go to state 44

    params                         shift and go to state 45
    paramList                      shift and go to state 46
    empty                          shift and go to state 47
    param                          shift and go to state 48

state 34

    (65) methodArray -> PERIOD . PUSH LPAREN arrayValue RPAREN
    (66) methodArray -> PERIOD . UNSHIFT LPAREN arrayValue RPAREN
    (67) methodArray -> PERIOD . POP LPAREN empty RPAREN
    (100) methodSet -> PERIOD . ADD LPAREN setValue RPAREN
    (101) methodSet -> PERIOD . DELETE LPAREN setValue RPAREN
    (102) methodSet -> PERIOD . CLEAR LPAREN empty RPAREN
    (72) methodMap -> PERIOD . CLEAR LPAREN RPAREN
    (73) methodMap -> PERIOD . LENGTH LPAREN RPAREN

    PUSH            shift and go to state 49
    UNSHIFT         shift and go to state 50
    POP             shift and go to state 51
    ADD             shift and go to state 52
    DELETE          shift and go to state 53
    CLEAR           shift and go to state 54
    LENGTH          shift and go to state 55


state 35

    (35) impresion -> ALERT LPAREN . expression RPAREN
    (36) impresion_vacio -> ALERT LPAREN . RPAREN
    (10) expression -> . conditionalEspecifico
    (11) expression -> . inicializarOp
    (134) conditionalEspecifico -> . ID opConditional dataCondi
    (135) conditionalEspecifico -> . NUM opConditional NUM
    (136) conditionalEspecifico -> . STRING opConditional STRING
    (103) inicializarOp -> . PLUS operacionesMath
    (104) inicializarOp -> . MINUS operacionesMath
    (105) inicializarOp -> . empty operacionesMath
    (41) empty -> .

  ! shift/reduce conflict for NUM resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for RPAREN resolved as shift
    RPAREN          shift and go to state 57
    ID              shift and go to state 60
    NUM             shift and go to state 61
    STRING          shift and go to state 62
    PLUS            shift and go to state 63
    MINUS           shift and go to state 64
    TIMES           reduce using rule 41 (empty -> .)
    PERIOD          reduce using rule 41 (empty -> .)

  ! NUM             [ reduce using rule 41 (empty -> .) ]
  ! MINUS           [ reduce using rule 41 (empty -> .) ]
  ! PLUS            [ reduce using rule 41 (empty -> .) ]
  ! RPAREN          [ reduce using rule 41 (empty -> .) ]

    expression                     shift and go to state 56
    conditionalEspecifico          shift and go to state 58
    inicializarOp                  shift and go to state 59
    empty                          shift and go to state 65

state 36

    (74) declareteFunction -> FUNCTION ID . LPAREN params RPAREN
    (75) declareteFunction -> FUNCTION ID . LPAREN params RPAREN sentencesCmpt

    LPAREN          shift and go to state 66


state 37

    (29) sentencias_if -> IF LPAREN . expression operadorLogical expression RPAREN LBLOCK sentencia RBLOCK
    (30) sentencias_if -> IF LPAREN . expression RPAREN LBLOCK sentencia RBLOCK
    (31) sentencias_if_else -> IF LPAREN . expression operadorLogical expression RPAREN LBLOCK sentencia RBLOCK ELSE LBLOCK sentencia RBLOCK
    (32) sentencias_if_else -> IF LPAREN . expression RPAREN LBLOCK sentencia RBLOCK ELSE LBLOCK sentencia RBLOCK
    (10) expression -> . conditionalEspecifico
    (11) expression -> . inicializarOp
    (134) conditionalEspecifico -> . ID opConditional dataCondi
    (135) conditionalEspecifico -> . NUM opConditional NUM
    (136) conditionalEspecifico -> . STRING opConditional STRING
    (103) inicializarOp -> . PLUS operacionesMath
    (104) inicializarOp -> . MINUS operacionesMath
    (105) inicializarOp -> . empty operacionesMath
    (41) empty -> .

  ! shift/reduce conflict for NUM resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for PLUS resolved as shift
    ID              shift and go to state 60
    NUM             shift and go to state 61
    STRING          shift and go to state 62
    PLUS            shift and go to state 63
    MINUS           shift and go to state 64
    TIMES           reduce using rule 41 (empty -> .)
    PERIOD          reduce using rule 41 (empty -> .)
    RPAREN          reduce using rule 41 (empty -> .)
    AND             reduce using rule 41 (empty -> .)
    OR              reduce using rule 41 (empty -> .)
    NOT             reduce using rule 41 (empty -> .)

  ! NUM             [ reduce using rule 41 (empty -> .) ]
  ! MINUS           [ reduce using rule 41 (empty -> .) ]
  ! PLUS            [ reduce using rule 41 (empty -> .) ]

    expression                     shift and go to state 67
    conditionalEspecifico          shift and go to state 58
    inicializarOp                  shift and go to state 59
    empty                          shift and go to state 65

state 38

    (33) sentencias_while -> WHILE LPAREN . expression RPAREN LBLOCK sentencia RBLOCK
    (34) sentencias_while -> WHILE LPAREN . expression operadorLogical expression RPAREN LBLOCK sentencia RBLOCK
    (10) expression -> . conditionalEspecifico
    (11) expression -> . inicializarOp
    (134) conditionalEspecifico -> . ID opConditional dataCondi
    (135) conditionalEspecifico -> . NUM opConditional NUM
    (136) conditionalEspecifico -> . STRING opConditional STRING
    (103) inicializarOp -> . PLUS operacionesMath
    (104) inicializarOp -> . MINUS operacionesMath
    (105) inicializarOp -> . empty operacionesMath
    (41) empty -> .

  ! shift/reduce conflict for NUM resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for PLUS resolved as shift
    ID              shift and go to state 60
    NUM             shift and go to state 61
    STRING          shift and go to state 62
    PLUS            shift and go to state 63
    MINUS           shift and go to state 64
    TIMES           reduce using rule 41 (empty -> .)
    PERIOD          reduce using rule 41 (empty -> .)
    RPAREN          reduce using rule 41 (empty -> .)
    AND             reduce using rule 41 (empty -> .)
    OR              reduce using rule 41 (empty -> .)
    NOT             reduce using rule 41 (empty -> .)

  ! NUM             [ reduce using rule 41 (empty -> .) ]
  ! MINUS           [ reduce using rule 41 (empty -> .) ]
  ! PLUS            [ reduce using rule 41 (empty -> .) ]

    expression                     shift and go to state 68
    conditionalEspecifico          shift and go to state 58
    inicializarOp                  shift and go to state 59
    empty                          shift and go to state 65

state 39

    (2) sentencia -> varType ID EQUAL . callMethods
    (48) varDeclaration -> varType ID EQUAL . arrayDeclare COLON
    (49) varDeclaration -> varType ID EQUAL . declareMap COLON
    (50) varDeclaration -> varType ID EQUAL . declararSet COLON
    (76) declareteFunction -> varType ID EQUAL . FUNCTION LPAREN params RPAREN
    (12) assingOperadores -> varType ID EQUAL . inicializarOp
    (52) callMethods -> . ID methodArray COLON
    (53) callMethods -> . ID methodSet COLON
    (54) callMethods -> . ID methodMap COLON
    (55) arrayDeclare -> . LBRACKET arrayValues RBRACKET
    (56) arrayDeclare -> . NEW ARRAY LPAREN arrayValues RPAREN
    (68) declareMap -> . NEW MAP LPAREN iterable RPAREN
    (91) declararSet -> . NEW SET LPAREN setValues RPAREN
    (103) inicializarOp -> . PLUS operacionesMath
    (104) inicializarOp -> . MINUS operacionesMath
    (105) inicializarOp -> . empty operacionesMath
    (41) empty -> .
